# todo

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  todo.md
.cache/clangd/index/: header.c.22E0B6CF3C690908.idx  header.h.E07A814C60BB228D.idx  main.c.0540B1867E33DBC1.idx  sqlite3.c.46C09BD1260EE572.idx  sqlite3.h.E13F1E6D26C45CD5.idx  task.c.BE9EC9540EC0293E.idx  task.h.CA7D6AF56E4CF3EE.idx  test.c.04DFE5ABC26D9001.idx  test.c.B552A71FD7A59C44.idx  test.h.11C9F9D42F124B20.idx  test.h.BF9F78D4A861C206.idx
header/: db.h
include/: gui.h
scripts/: build.sh  run.sh
src/: db.c  gui.c  main.c
test1/: test.c  test.h
